[gd_scene load_steps=8 format=3 uid="uid://q5sbjvosbnrn"]

[ext_resource type="PackedScene" uid="uid://drpx64vwtj8ty" path="res://game/towers/_base/tower_base.tscn" id="1_obl0b"]
[ext_resource type="Script" path="res://game/towers/fisch_beschworer/fisch_spawner.gd" id="2_hlyh0"]
[ext_resource type="PackedScene" uid="uid://bcgp3b5v70md0" path="res://game/towers/fisch_beschworer/clownfish.tscn" id="3_1r5t7"]
[ext_resource type="PackedScene" uid="uid://c2ocwx4wxj1q6" path="res://game/components/healthbar_component.tscn" id="4_1xoxp"]
[ext_resource type="PackedScene" uid="uid://do3llq0hiuf6v" path="res://assets/models/towers/Anemone_Clownfisch/Anemone.gltf" id="5_510sl"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_lfbnd"]
height = 0.8
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_641jy"]
radius = 12.0

[node name="FischSpawner" instance=ExtResource("1_obl0b")]
script = ExtResource("2_hlyh0")
spawn_rate = 10.0
spawn_scene = ExtResource("3_1r5t7")
max_health = 20.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
shape = SubResource("CylinderShape3D_lfbnd")

[node name="Patrol_zone" type="Area3D" parent="." index="1"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Patrol_zone" index="0"]
shape = SubResource("SphereShape3D_641jy")

[node name="Healthbar" parent="." index="2" instance=ExtResource("4_1xoxp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.38411, 0.00377223)

[node name="Spawnpoint" type="Marker3D" parent="." index="3"]
unique_name_in_owner = true

[node name="SpawnTimer" type="Timer" parent="Spawnpoint" index="0"]
unique_name_in_owner = true
autostart = true

[node name="Anemone2" parent="." index="4" instance=ExtResource("5_510sl")]

[connection signal="body_entered" from="Patrol_zone" to="." method="_on_patrol_zone_body_entered"]
[connection signal="body_exited" from="Patrol_zone" to="." method="_on_patrol_zone_body_exited"]
[connection signal="timeout" from="Spawnpoint/SpawnTimer" to="." method="_on_spawn_timer_timeout"]
